unicard_types_macro/tests/ui/struct_tuple_test.rs
use unicard_types_macro::WasmType;

#[derive(WasmType)]
struct ContainsInvalidTypes(std::fs::File);

fn main() {}